# stable-pref-rl

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.outbound/: setup.sh
configs/: config.yaml  default.yaml  direct.yaml
configs/env/: quadruped_walk.yaml
configs/envs/: quadruped_walk.yaml  walker_walk.yaml
configs/preset/direct/: direct.yaml
configs/preset/direct_pebble/: quadruped_walk.yaml
configs/preset/direct_pref_ppo/: quadruped_walk.yaml
configs/preset/discriminator/: direct.yaml
configs/preset/pebble/: quadruped_walk.yaml
configs/preset/ppo/: direct.yaml  quadruped_walk.yaml  walker_walk.yaml
configs/preset/pref/: quadruped_walk.yaml  walker_walk.yaml
configs/preset/pref_direct/: quadruped_walk.yaml
configs/preset/pref_ppo/: quadruped_walk.yaml  walker_walk.yaml
configs/preset/sac/: quadruped_walk.yaml
data/: validation_data.pkl  validation_rewards.pkl  validation_segments.pkl  validation_steps.pkl
notebooks/: create_rm_validation_data.ipynb
scripts/baselines/: direct.sh  pebble.sh  ppo.sh  pref_ppo.sh  sac.sh
scripts/environments/: walker.sh
scripts/experiments/acc_threshold/: pref_ppo.sh
scripts/experiments/ann_buf_size/: pref_ppo.sh
scripts/experiments/ann_buf_size/feed_buf_size/: pref_ppo.sh
scripts/experiments/complete_feedback/: pref_ppo.sh
scripts/experiments/early_stopping/: pref_ppo.sh
scripts/experiments/ensemble/disjoint_data/: pref_ppo.sh
scripts/experiments/ensemble/ensemble_size/: pref_ppo.sh
scripts/experiments/ensemble/size/: pref_ppo.sh
scripts/experiments/ensemble_agg/: outlier.sh  random.sh
scripts/experiments/feed_batch_size/: pref_ppo.sh
scripts/experiments/feed_batch_size/limited_buffers/: pref_ppo.sh
scripts/experiments/feed_buf_size/: pref_ppo.sh
scripts/experiments/feed_sched/: pref_ppo.sh
scripts/experiments/feed_schedule/: pref_ppo.sh
scripts/experiments/fixed_epochs/: pref_ppo.sh
scripts/experiments/kl_penalty/: pref_ppo.sh
scripts/experiments/limited_eps/: pref_ppo.sh
scripts/experiments/max_feed/: pref_ppo.sh
scripts/experiments/max_feed/limited_buffers/: pref_ppo.sh
scripts/experiments/n_steps_reward/: pref_ppo.sh
scripts/experiments/n_steps_reward/limited_buffers/: pref_ppo.sh
scripts/experiments/no_uniform_on_first_train/: pref_ppo.sh
scripts/experiments/no_unsupervised_pretraining/: pref_ppo.sh
scripts/experiments/policy/no_clip_schedule/: pref_ppo.sh
scripts/experiments/policy/shared/: pref_ppo.sh
scripts/experiments/policy_filtering/: pref_ppo.sh
scripts/experiments/policy_sampling/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/coupled/frozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/coupled/unfrozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/uncoupled/frozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/uncoupled/frozen/reward/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/uncoupled/frozen/sampler/: pref_ppo.sh
scripts/experiments/pred_age/absolute_loss/uncoupled/unfrozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/auxiliary/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/coupled/frozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/coupled/unfrozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/uncoupled/frozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/uncoupled/frozen/reward/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/uncoupled/frozen/sampler/: pref_ppo.sh
scripts/experiments/pred_age/relative_loss/uncoupled/unfrozen/loss_only/: pref_ppo.sh
scripts/experiments/pred_age/reward/: pref_ppo.sh
scripts/experiments/sampler/: mixed.sh
scripts/experiments/sampler/uniform_fraction/: pref_ppo.sh
scripts/experiments/slow_start/: pref_ppo.sh
scripts/experiments/synthetic/feedback_resampling/: pref_ppo.sh
scripts/experiments/synthetic/feedback_resampling/alpha/: pref_ppo.sh
scripts/experiments/synthetic/feedback_resampling/limited_buffers/: pref_ppo.sh
scripts/experiments/synthetic_feedback/: pref_ppo.sh
scripts/experiments/synthetic_feedback/concurrent/: pref_ppo.sh
scripts/experiments/synthetic_feedback/curriculum/: pref_ppo.sh
scripts/experiments/unsuper/: pref_ppo.sh
scripts/methods/: direct_pebble.sh  direct_pref_ppo.sh  logging_ppo.sh  pebble.sh  ppo.sh  pref_ppo.sh  sac.sh
src/pref_rl/: config.py  envs.py  train.py
src/pref_rl/callbacks/: direct.py  discriminator.py  kl_penalty.py  pref.py  pref_direct.py  pref_ppo.py  reward_mod.py  unsuper.py  unsupervised.py
src/pref_rl/methods/: __init__.py  direct.py  direct_pebble.py  direct_pref_ppo.py  logging_ppo.py  pebble.py  pref_direct.py  pref_ppo.py
src/pref_rl/policies/: shared.py
src/pref_rl/utils/: auxiliary.py  buffers.py  callbacks.py  data.py  entropy.py  logger.py  logging.py  model.py  pref.py  reward_models.py  sampler.py  schedules.py  synthetic.py  teacher.py  train_schedules.py
