[project]
name = "pref_rl"
version = "0.0.1"
dependencies = [
    "stable-baselines3>=2.4.1",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
    "rich>=13.9.4",
    "einops>=0.8.0",
]
requires-python = ">=3.10"
authors = [
    {name = "Johannes Karl Kindermann", email = "jkindermann@campus.lmu.de"},
]
readme = "README.md"

[project.optional-dependencies]
wandb = [
    "wandb>=0.19.4",
]
b-pref = [
    "shimmy[dm-control]>=2.0.0",
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@master",
]
direct = [
    "bpy>=3.6.0",
    "matplotlib>=3.5",
]

[project.scripts]
train = "pref_rl.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pref_rl"]
include = ["configs/**"]

[tool.hatch.metadata]
allow-direct-references = true
