[project]
name = "pref_rl"
version = "0.0.1"
dependencies = [
    "stable-baselines3==2.6.0",
    "hydra-core==1.3.2",
    "hydra-joblib-launcher==1.2.0",
    "tensorboard==2.19.0",
    "tqdm==4.67.1",
    "rich==14.0.0",
    "einops==0.8.1",
    "python-dotenv==1.1.0",
    "etils==1.11.0",
    "pygments==2.19.1",
    "pandas==2.2.3",
    "virtualenv==20.29.1",
    "protobuf==5.29.4",
    "decorator==5.1.1",
    "async-timeout==5.0.1",
    "idna==3.10",
    "zstandard==0.23.0",
    "pyasn1-modules==0.4.1",
    "distlib==0.3.9",
    "kiwisolver==1.4.8",
    "metaworld==2.0.0",
    "gymnasium==1.1.1",
    "pip==24.3.1",
    "multidict==6.1.0",
    "prometheus-client==0.21.1",
    "lxml==5.3.0",
    "pytz==2025.2",
    "grpcio==1.71.0",
    "fasteners==0.19",
    "zipp==3.21.0",
    "fonttools==4.57.0",
    "pynacl==1.5.0",
    "msgpack==1.1.0",
    "googleapis-common-protos==1.66.0",
    "requests==2.32.3",
    "frozenlist==1.5.0",
    "h5py==3.12.1",
    "cachetools==5.5.1",
    "imageio==2.36.1",
    "google-api-core==2.24.0",
    "markdown-it-py==3.0.0",
    "glfw==2.8.0",
    "farama-notifications==0.0.4",
    "gitpython==3.1.44",
    "fsspec==2025.3.2",
    "referencing==0.36.1",
    "networkx==3.4.2",
    "pyparsing==3.2.3",
    "joblib==1.4.2",
    "proglog==0.1.10",
    "paramiko==3.5.0",
    "urllib3==2.3.0",
    "bpy==4.0.0",
    "ray==2.41.0",
    "click==8.1.8",
    "tzdata==2025.2",
    "aiohttp-cors==0.7.0",
    "scipy==1.15.1",
    "typing-extensions==4.13.2",
    "mujoco==3.2.7",
    "cffi==1.17.1",
    "aiohttp==3.11.11",
    "jsonschema==4.23.0",
    "boto3==1.36.5",
    "propcache==0.2.1",
    "pyasn1==0.6.1",
    "botocore==1.36.5",
    "werkzeug==3.1.3",
    "markdown==3.8",
    "psutil==6.1.1",
    "dm-control==1.0.27",
    "setuptools==78.1.0",
    "jmespath==1.0.1",
    "gym-notices==0.0.8",
    "gitdb==4.0.12",
    "jsonschema-specifications==2024.10.1",
    "mdurl==0.1.2",
    "hydra-submitit-launcher==1.2.0",
    "python-dateutil==2.9.0.post0",
    "mpmath==1.3.0",
    "py-spy==0.4.0",
    "labmaze==1.0.6",
    "sentry-sdk==2.20.0",
    "yarl==1.18.3",
    "charset-normalizer==3.4.1",
    "numpy==2.2.4",
    "rsa==4.9",
    "packaging==24.2",
    "torch==2.6.0",
    "antlr4-python3-runtime==4.9.3",
    "opencensus-context==0.1.3",
    "pydantic-core==2.27.2",
    "imageio-ffmpeg==0.6.0",
    "pycparser==2.22",
    "cycler==0.12.1",
    "jinja2==3.1.6",
    "opencensus==0.11.4",
    "filelock==3.18.0",
    "google-auth==2.38.0",
    "pyopengl==3.1.7",
    "dm-tree==0.1.8",
    "moviepy==2.1.2",
    "docker-pycreds==0.4.0",
    "smart-open==7.1.0",
    "cryptography==44.0.0",
    "bcrypt==4.2.1",
    "contourpy==1.3.1",
    "wrapt==1.17.2",
    "sympy==1.13.1",
    "proto-plus==1.25.0",
    "cython==3.0.11",
    "aiosignal==1.3.2",
    "pyyaml==6.0.2",
    "rpds-py==0.22.3",
    "attrs==24.3.0",
    "smmap==5.0.2",
    "shimmy==2.0.0",
    "matplotlib==3.10.1",
    "submitit==1.5.2",
    "tensorboard-data-server==0.7.2",
    "hydra-ray-launcher==1.2.1",
    "aiohappyeyeballs==2.4.4",
    "platformdirs==4.3.6",
    "s3transfer==0.11.2",
    "colorful==0.5.6",
    "gym==0.26.2",
    "setproctitle==1.3.4",
    "annotated-types==0.7.0",
    "certifi==2024.12.14",
    "dm-env==1.6",
    "omegaconf==2.3.0",
    "pydantic==2.10.5",
    "six==1.17.0",
    "wandb==0.19.4",
    "importlib-resources==6.5.2",
    "pipdeptree==2.24.0",
    "absl-py==2.2.2",
    "markupsafe==3.0.2",
]
requires-python = ">=3.10"
authors = [
    {name = "Johannes Karl Kindermann", email = "j.kindermann@campus.lmu.de"},
]
readme = "README.md"

[project.optional-dependencies]
wandb = [
    "wandb>=0.19.4",
]
b-pref = [
    "shimmy[dm-control]>=2.0.0",
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@304d79d",
]
direct = [
    "bpy>=3.6.0",
    "matplotlib>=3.5",
]
notebooks = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[project.scripts]
train = "pref_rl.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pref_rl"]
include = ["configs/**"]

[tool.hatch.metadata]
allow-direct-references = true
